fix(tabs-extended): removing extra padding from tab content

--- a/packages/styles/scss/components/tabs-extended/_tabs-extended.scss
+++ b/packages/styles/scss/components/tabs-extended/_tabs-extended.scss
@@ -122,7 +122,7 @@
     .#{$prefix}--tab-content {
       @include carbon--type-style('body-long-02', true);
 
-      padding: 0 $carbon--spacing-05;
+      padding: 0;
       display: none;
 
       @include carbon--breakpoint(lg) {
